Commit Portal 6 Maria

--- a/index.html
+++ b/index.html
@@ -91,15 +91,9 @@
     </section>
     <div class="container content">
         <h2 class="titulo">Acerca de Nosotros</h2>
-        <p class="texto"> Somos una empresa de desarrollo de software especializada en ofrecer soluciones
-            a medida para empresas. Nos enfocamos en ofrecer software de alta calidad y fácil de
-            usar, que se adapta a las necesidades específicas de cada cliente. Trabajamos con las últimas
-            tecnologías y metodologías de desarrollo de software para garantizar que nuestros productos sean
-            siempre innovadores y eficientes. </p>
-        <br>
-        <p class="texto">Desarrollo de software a medida: creamos soluciones personalizadas para empresas
-            que buscan mejorar sus procesos y aumentar su eficiencia, a través del desarrollo de
-            aplicaciones a medida le brinda la oportunidad de contar con una solución tecnológica única.</p>
+        <p class="texto"> La empresa se dedica al desarrollo de software personalizado para empresas, enfocándose en ofrecer soluciones de 
+            alta calidad y adaptadas a las necesidades de cada cliente. Utilizan tecnologías modernas y métodos de desarrollo innovadores. Su 
+            enfoque es mejorar los procesos empresariales a través de aplicaciones a medida. </p>
     </div>
     <section class="section">
         <div class="container">
@@ -108,32 +102,24 @@
                 <div class="column">
                     <div class="card">
                         <h3 class="title is-4">Nuestros Servicios</h3>
-                        <p class="texto"><ul>
-                            <li>Desarrollo de aplicaciones móviles</li>
-                            <li>Consultoría en tecnología</li>
-                            <li>Desarrollo de software para la nube</li>
-                            <li>Desarrollo de software empresarial</li>
-                            <li>Mantenimiento y soporte del software</li>
-                            <li>Integración de sistemas</li>
-                            <li>Entre muchos otros...</li>
-                        </ul></p>
+                        <p class="texto">La empresa ofrece una amplia gama de servicios de desarrollo de software, que incluyen aplicaciones 
+                            móviles, consultoría tecnológica, software en la nube, software empresarial, mantenimiento, integración de sistemas y 
+                            más.</p>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card">
                         <h3 class="title is-4"> Comunicación </h3>
-                        <p class="texto">Nos esforzamos por fomentar un diálogo abierto y transparente tanto
-                            con nuestros clientes como dentro de nuestro equipo. Creemos que una comunicación efectiva
-                            es esencial para entender y satisfacer las necesidades de nuestros clientes, así como para
-                            garantizar un flujo constante de información y colaboración entre todas las partes
-                            involucradas.</p>
+                        <p class="texto">Promovemos una comunicación abierta y transparente con clientes y equipo, considerándola esencial para 
+                            entender y satisfacer las necesidades de los clientes y garantizar una colaboración efectiva.</p>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card">
                         <h3 class="title is-4"> Calidad </h3>
-                        <p class="texto">La calidad es otro valor fundamental que nos impulsa a superar
-                            constantemente las expectativas.</p>
+                        <p class="texto">Priorizamos la calidad y nos esforzamos por superar las expectativas, ofreciendo productos y servicios de
+                            excelencia. Nuestro equipo altamente calificado garantiza que nuestras soluciones cumplan rigurosos estándares de 
+                            calidad.</p>
                     </div>
                 </div>
             </div>
@@ -144,20 +130,16 @@
             <div class="column">
                 <div class="card">
                     <h3 class="title is-4"> Innovación </h3>
-                    <p class="has-text-centered">La innovación es el motor principal para el progreso. Como empresa
-                        joven de software, nos esforzamos por estar a la vanguardia de las últimas tendencias
-                        tecnológicas y por ofrecerte soluciones innovadoras que impulsen el crecimiento de tu
-                        negocio. Nuestro equipo de profesionales altamente capacitados se mantiene actualizado en
-                        las últimas tecnologías y metodologías de desarrollo de software. </p>
+                    <p class="has-text-centered">La innovación es clave en nuestra empresa. Nos esforzamos por ofrecer soluciones tecnológicas 
+                        innovadoras que impulsen el crecimiento empresarial. Nuestro equipo altamente capacitado se mantiene actualizado en las 
+                        últimas tecnologías y metodologías de desarrollo de software. </p>
                 </div>
             </div>
             <div class="column">
                 <div class="card">
                     <h3 class="title is-4"> Soluciones Accesibles </h3>
-                    <p class="has-text-centered">Sabemos que la tecnología debe estar al alcance de todos,
-                        independientemente del tamaño o presupuesto de la empresa. Nuestra pasión por crear
-                        soluciones accesibles nos impulsa a desarrollar software intuitivo y fácil de usar,
-                        eliminando barreras y facilitando su adopción. </p>
+                    <p class="has-text-centered">Nos esforzamos por hacer que la tecnología sea accesible para todos, sin importar el tamaño o 
+                        presupuesto de la empresa. Creamos software intuitivo y fácil de usar para eliminar barreras y promover su adopción. </p>
                 </div>
             </div>
         </div>
