Commit de Tutorias 13 - Santiago

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> COEX </title>
 
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/bulma.min.css">
     <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="./css/index_prin.css">
+    <link rel="stylesheet" href="./css/index_principal.css">
     <link rel="stylesheet" href="./css_temas/index.css">
 </head>
 <body>
