Commit del Portal 6 - Santiago

--- a/en/information.html
+++ b/en/information.html
@@ -2,16 +2,16 @@
 <html lang="es">
 
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title> Information </title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title> Information </title>
 
-<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 
-<link rel="stylesheet" href="../css/bulma.min.css">
-<link rel="stylesheet" href="../css/index.css">
-<link rel="stylesheet" href="../css_temas/index.css">
+  <link rel="stylesheet" href="../css/bulma.min.css">
+  <link rel="stylesheet" href="../css/index.css">
+  <link rel="stylesheet" href="../css/tema_oscuro.css">
 </head>
 
 <body>
