--- a/en/location.html
+++ b/en/location.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="../css/bulma.min.css">
     <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../css_temas/index.css">
+    <link rel="stylesheet" href="../css/tema_oscuro.css">
     <link rel="stylesheet" href="../css/ubicacion.css">
 </head>
 
