--- a/index_english.html
+++ b/index_english.html
@@ -14,7 +14,7 @@
     <header class="sticky-header">
         <nav class="navbar is-light" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a class="navbar-item" href="index.html">
+                <a class="navbar-item" href="./index.html">
                     <img src="./img/logo.jpg" width="40px" height="40px" class="mr-4">
                 </a>
             </div>
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="navbar-brand">
-                <a class="navbar-item is-light" href="index_english.html">English</a>
+                <a class="navbar-item is-light" href="index.html">English</a>
             </div>
             <nav class="boton_temas">
                 <div class="enlaces">
