commit Portal 7 Maria

--- a/es/index.html
+++ b/es/index.html
@@ -103,15 +103,17 @@
                 <div class="column">
                     <p id="titulo"><b>Acerca de Nosotros</b></p>
                     <br>
-                    <p class="texto"> Somos una empresa de desarrollo de software especializada en ofrecer soluciones
-                        a medida para empresas. Nos enfocamos en ofrecer software de alta calidad y fácil de
-                        usar, que se adapta a las necesidades específicas de cada cliente. Trabajamos con las últimas
-                        tecnologías y metodologías de desarrollo de software para garantizar que nuestros productos sean
-                        siempre innovadores y eficientes. </p>
-                    <br>
-                    <p class="texto">Desarrollo de software a medida: creamos soluciones personalizadas para empresas
-                        que buscan mejorar sus procesos y aumentar su eficiencia, a través del desarrollo de
-                        aplicaciones a medida le brinda la oportunidad de contar con una solución tecnológica única.</p>
+                    <p class="texto"> 
+                        <ul>
+                        <li class="mb-2"><span class="icon has-text-success"><i class="fas fa-check"></i></span> Desarrollo de aplicaciones móviles</li>
+                        <li class="mb-2"><span class="icon has-text-success"><i class="fas fa-check"></i></span> Consultoría en tecnología</li>
+                        <li class="mb-2"><span class="icon has-text-success"><i class="fas fa-check"></i></span> Desarrollo de software para la nube</li>
+                        <li class="mb-2"><span class="icon has-text-success"><i class="fas fa-check"></i></span> Desarrollo de software empresarial</li>
+                        <li class="mb-2"><span class="icon has-text-success"><i class="fas fa-check"></i></span> Mantenimiento y soporte del software</li>
+                        <li class="mb-2"><span class="icon has-text-success"><i class="fas fa-check"></i></span> Integración de sistemas</li>
+                        <li class="mb-2"><span class="icon has-text-success"><i class="fas fa-check"></i></span> Entre muchos otros...</li>
+                    </ul>
+                     </p>
                 </div>
 
                 <div class="column is-one-third pt-5">
