--- a/index.html
+++ b/index.html
@@ -76,28 +76,57 @@
     </section>
     <div class="container content">
         <h2 class="title has-text-black">Acerca de Nosotros</h2>
-        <p class="texto has-text-black">La empresa se dedica al desarrollo de software personalizado para empresas, enfocándose en ofrecer soluciones de alta calidad y adaptadas a las necesidades de cada cliente. Utilizan tecnologías modernas y métodos de desarrollo innovadores. Su enfoque es mejorar los procesos empresariales a través de aplicaciones a medida.</p>
+        <p class="texto has-text-black"> Somos una empresa de desarrollo de software especializada en ofrecer soluciones
+            a medida para empresas. Nos enfocamos en ofrecer software de alta calidad y fácil de
+            usar, que se adapta a las necesidades específicas de cada cliente. Trabajamos con las últimas
+            tecnologías y metodologías de desarrollo de software para garantizar que nuestros productos sean
+            siempre innovadores y eficientes. </p>
+        <p class="texto has-text-black"> Desarrollo de software a medida: creamos soluciones personalizadas para empresas
+            que buscan mejorar sus procesos y aumentar su eficiencia, a través del desarrollo de
+            aplicaciones a medida le brinda la oportunidad de contar con una solución tecnológica única. </p>
+        
     </div>
-    <section class="section">
+    <div>
+        <iframe src="./es/carrusel.html" width="85%" height="800vh" sandbox="allow-same-origin allow-scripts" style="display: block; margin: 0 auto;"></iframe>
+    </div>
+    <section class="section mt-6">
         <div class="container">
             <h2 class="title has-text-white">Características Destacadas</h2>
             <div class="columns">
                 <div class="column">
                     <div class="card">
-                        <h3 class="title is-4 has-text-black">Nuestros Servicios</h3>
-                        <p class="texto has-text-black">La empresa ofrece una amplia gama de servicios de desarrollo de software, que incluyen aplicaciones móviles, consultoría tecnológica, software en la nube, software empresarial, mantenimiento, integración de sistemas y más.</p>
+                        <h3 class="title is-4 has-text-white">Nuestros Servicios</h3>
+                        <p class="texto has-text"> 
+                            <ul>
+                            <li class="mb-2"><span class="icon has-text-success"><i class="fas fa-check"></i></span> Desarrollo de aplicaciones móviles</li>
+                            <li class="mb-2"><span class="icon has-text-success"><i class="fas fa-check"></i></span> Consultoría en tecnología</li>
+                            <li class="mb-2"><span class="icon has-text-success"><i class="fas fa-check"></i></span> Desarrollo de software para la nube</li>
+                            <li class="mb-2"><span class="icon has-text-success"><i class="fas fa-check"></i></span> Desarrollo de software empresarial</li>
+                            <li class="mb-2"><span class="icon has-text-success"><i class="fas fa-check"></i></span> Mantenimiento y soporte del software</li>
+                            <li class="mb-2"><span class="icon has-text-success"><i class="fas fa-check"></i></span> Integración de sistemas</li>
+                            <li class="mb-2"><span class="icon has-text-success"><i class="fas fa-check"></i></span> Entre muchos otros...</li>
+                        </ul>
+                        
                     </div>
                 </div>
                 <div class="column">
                     <div class="card">
-                        <h3 class="title is-4 has-text-black">Comunicación</h3>
-                        <p class="texto has-text-black">Promovemos una comunicación abierta y transparente con clientes y equipo, considerándola esencial para entender y satisfacer las necesidades de los clientes y garantizar una colaboración efectiva.</p>
+                        <h3 class="title is-4 has-text-white">Comunicación</h3>
+                        <p class="has-text-centered">Nos esforzamos por fomentar un diálogo abierto y transparente tanto
+                            con nuestros clientes como dentro de nuestro equipo. Creemos que una comunicación efectiva
+                            es esencial para entender y satisfacer las necesidades de nuestros clientes, así como para
+                            garantizar un flujo constante de información y colaboración entre todas las partes
+                            involucradas.</p>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card">
-                        <h3 class="title is-4 has-text-black">Calidad</h3>
-                        <p class="texto has-text-black">Priorizamos la calidad y nos esforzamos por superar las expectativas, ofreciendo productos y servicios de excelencia. Nuestro equipo altamente calificado garantiza que nuestras soluciones cumplan rigurosos estándares de calidad.</p>
+                        <h3 class="title is-4 has-text-white">Calidad</h3>
+                        <p class="has-text-centered">La calidad es otro valor fundamental que nos impulsa a superar
+                            constantemente las expectativas. Nos esforzamos por ofrecer productos y servicios que
+                            cumplan con los más altos estándares de excelencia. Nuestro equipo de profesionales
+                            altamente calificados se dedica a garantizar que cada línea de código, cada funcionalidad y
+                            cada aspecto de nuestras soluciones cumplan con los más rigurosos controles de calidad. </p>
                     </div>
                 </div>
             </div>
@@ -107,34 +136,41 @@
         <div class="columns">
             <div class="column">
                 <div class="card">
-                    <h3 class="title is-4 has-text-black">Innovación</h3>
-                    <p class="has-text-centered has-text-black">La innovación es clave en nuestra empresa. Nos esforzamos por ofrecer soluciones tecnológicas innovadoras que impulsen el crecimiento empresarial. Nuestro equipo altamente capacitado se mantiene actualizado en las últimas tecnologías y metodologías de desarrollo de software.</p>
+                    <h3 class="title is-4 has-text-white">Innovación</h3>
+                    <p class="has-text-centered">La innovación es el motor principal para el progreso. Como empresa
+                        joven de software, nos esforzamos por estar a la vanguardia de las últimas tendencias
+                        tecnológicas y por ofrecerte soluciones innovadoras que impulsen el crecimiento de tu
+                        negocio. Nuestro equipo de profesionales altamente capacitados se mantiene actualizado en
+                        las últimas tecnologías y metodologías de desarrollo de software. </p>
                 </div>
             </div>
             <div class="column">
                 <div class="card">
-                    <h3 class="title is-4 has-text-black">Soluciones Accesibles</h3>
-                    <p class="has-text-centered has-text-black">Nos esforzamos por hacer que la tecnología sea accesible para todos, sin importar el tamaño o presupuesto de la empresa. Creamos software intuitivo y fácil de usar para eliminar barreras y promover su adopción.</p>
+                    <h3 class="title is-4 has-text-white">Soluciones Accesibles</h3>
+                    <p class="has-text-centered">Sabemos que la tecnología debe estar al alcance de todos,
+                        independientemente del tamaño o presupuesto de la empresa. Nuestra pasión por crear
+                        soluciones accesibles nos impulsa a desarrollar software intuitivo y fácil de usar,
+                        eliminando barreras y facilitando su adopción. </p>
                 </div>
             </div>
         </div>
     </div>
-    <section class="cta">
+    <!-- <section class="cta">
         <div class="container">
             <h2 class="title has-text-black">Únete a Nuestra Comunidad</h2>
             <p>Regístrate para recibir actualizaciones y noticias emocionantes.</p>
             <a href="#" class="button is-primary is-large">Regístrate Ahora</a>
         </div>
-    </section>
+    </section> -->
     <section class="section">
         <div class="container">
             <h2 class="title has-text-black">Ubicación de la Empresa</h2>
             <div class="gallery">
                 <div class="gallery-item">
-                    <img src="./img/index/imagen1.jpg" alt="Imagen 1">
+                    <img src="./img/ImagenCowork1.jpg" alt="Imagen 1">
                 </div>
                 <div class="gallery-item">
-                    <img src="./img/index/imagen2.jpg" alt="Imagen 2">
+                    <img src="./img/ImagenCowork2.jpg" alt="Imagen 2">
                 </div>
                 <div class="gallery-item">
                     <img src="imagen3.jpg" alt="Imagen 3">
