commit portal 9 Maria

--- a/en/values.html
+++ b/en/values.html
@@ -27,7 +27,7 @@
             </div>
 
             <div class="navbar-brand navegador">
-                <a class="navbar-item is-light" href="index.html"> Home </a>
+                <a class="navbar-item is-light" href="/en/index.html"> Home </a>
             </div>
 
             <div id="navbarBasicExample" class="navbar-menu">
