commit Portal - Maria

--- a/en/carousel.html
+++ b/en/carousel.html
@@ -53,7 +53,7 @@
                         <div class="carousel-item">
                             <h2 class="subtitulo"> Enzo <br> Corrado </h2>
                             
-                            <p class="subtitulo_imagen"> Marketing <br> and Accounting </p>
+                            <p class="subtitulo_imagen"> Specialist in <br> Software Quality </p>
                             <img src="../carrusel/img/enzo.jpg" alt="Imagen 1">
 
                         </div>
