--- a/en/index.html
+++ b/en/index.html
@@ -91,8 +91,8 @@
         </video>
         <div class="hero-body">
             <div class="container">
-                <h1 class="title has-text-black">COEX</h1>
-                <h2 class="subtitle has-text-black"> Let's develop the future you imagine! </h2>
+                <h1 class="titulo has-text-white">COEX</h1>
+                <h2 class="subtitulo has-text-white"> Let's develop the future you imagine! </h2>
             </div>
         </div>
     </section>
