commit Portal 10 - Maria

--- a/en/carousel.html
+++ b/en/carousel.html
@@ -59,7 +59,7 @@
                         </div>
 
                         <div class="carousel-item">
-                            <h2 class="subtitulo"> Eugenia <br> Aranzábal </h2>
+                            <h2 class="subtitulo"> Eugenia <br> Aranzabal </h2>
                             
                             <p class="subtitulo_imagen"> Database <br> Administrator </p>
                             <img src="../carrusel/img/eugenia.jpg" alt="Imagen 2">
