--- a/black/es/informacion.html
+++ b/black/es/informacion.html
@@ -34,15 +34,15 @@
             <div class="navbar-start">
 
                 <div class="navbar-item has-dropdown is-hoverable">
-                    <a class="navbar-item is-light" href="valores.html"> Valores </a>
+                    <a class="navbar-item is-light has-text-white" href="valores.html"> Valores </a>
                 </div>
 
                 <div class="navbar-item has-dropdown is-hoverable">
-                    <a class="navbar-item" href="informacion.html"> Información </a>
+                    <a class="navbar-item has-text-white" href="informacion.html"> Información </a>
                 </div>
 
                 <div class="navbar-item has-dropdown is-hoverable">
-                    <a class="navbar-item" href="ubicacion.html"> Ubicación </a>
+                    <a class="navbar-item has-text-white" href="ubicacion.html"> Ubicación </a>
                 </div>
 
                 <div class="navbar-item has-dropdown is-hoverable">
