--- a/black/es/valores.html
+++ b/black/es/valores.html
@@ -27,22 +27,22 @@
             </div>
 
             <div class="navbar-brand navegador">
-                <a class="navbar-item is-light" href="../index_black.html"> Inicio </a>
+                <a class="navbar-item is-black" href="../index_black.html"> Inicio </a>
             </div>
 
             <div id="navbarBasicExample" class="navbar-menu">
                 <div class="navbar-start">
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-item is-black" href="valores.html"> Valores </a>
+                        <a class="navbar-item is-black has-text-white" href="valores.html"> Valores </a>
                     </div>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-item" href="informacion.html"> Información </a>
+                        <a class="navbar-item is-black has-text-white" href="informacion.html"> Información </a>
                     </div>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-item" href="ubicacion.html"> Ubicación </a>
+                        <a class="navbar-item is-black has-text-white" href="ubicacion.html"> Ubicación </a>
                     </div>
 
                     <div class="navbar-item has-dropdown is-hoverable">
